# EMG

./: CMakeLists.txt  README.md
include/EMG/EMG/: EmgDataCapture.hpp  EmgDirectMapping.hpp  EmgFeatures.hpp  MesArray.hpp  MyoelectricSignal.hpp
include/EMG/SignalProcessing/: Rectifier.hpp  SignalProcessingFunctions.hpp  SignalProcessor.hpp  TeagerKaiserEnergyOperator.hpp
